--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://localhost:5002/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-to-pdf": "0.0.14",
+    "react-to-print": "^2.14.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
