--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.2.8"
+    "mongoose": "^6.2.8",
+    "react-select": "^5.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
